<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/search_bg"
        android:backgroundTint="@color/searchColor"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_hint" />

        <org.imaginativeworld.whynotimagecarousel.ImageCarousel
            android:id="@+id/carousel"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_below="@id/search_bar"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Возможно, вы искали"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:layout_below="@id/carousel"
        android:id="@+id/text_main1"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"/>

    <HorizontalScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_below="@id/text_main1"
        android:layout_marginTop="10dp"
        android:scrollbars="none">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/bg_card"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                android:layout_marginStart="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:src="@drawable/resource_break"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:id="@+id/cardMainText1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/cardMain"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/card2Text"
                        android:layout_marginStart="10dp"
                        android:textSize="8sp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/van"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/cardPrice"
                            android:textStyle="bold"/>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:text="@string/cardTime"
                                android:textSize="6sp"/>
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/bg_card"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                android:layout_marginStart="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:src="@drawable/resource_break"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:id="@+id/cardMainText2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/cardMain"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/card2Text"
                        android:layout_marginStart="10dp"
                        android:textSize="8sp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/van"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/cardPrice"
                            android:textStyle="bold"/>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:text="@string/cardTime"
                                android:textSize="6sp"/>
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/bg_card"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                android:layout_marginStart="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:src="@drawable/resource_break"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:id="@+id/cardMainText3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/cardMain"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/card2Text"
                        android:layout_marginStart="10dp"
                        android:textSize="8sp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/van"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/cardPrice"
                            android:textStyle="bold"/>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:text="@string/cardTime"
                                android:textSize="6sp"/>
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card4"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/bg_card"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:src="@drawable/resource_break"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:id="@+id/cardMainText4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/cardMain"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/card2Text"
                        android:layout_marginStart="10dp"
                        android:textSize="8sp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/van"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/cardPrice"
                            android:textStyle="bold"/>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:text="@string/cardTime"
                                android:textSize="6sp"/>
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Что-то новенькое"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:layout_below="@id/scroll"
        android:id="@+id/text_main2"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/text_main2"
        android:elevation="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="30dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/stroy_img_bg"
            android:scaleType="centerCrop"
            android:translationZ="1dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:translationZ="100dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="20dp">

                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/txt1"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:elevation="10dp"
                    android:textStyle="bold"
                    android:translationZ="2dp" />

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/txt2"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:elevation="10dp"
                    android:textStyle="bold"
                    android:translationZ="2dp" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>